# claudefs

./: .gitignore  .infra-verify  A1-SESSION11-SUMMARY.md  A10-PHASE3-PHASE4-PLAN.md  A10-PHASE35-STATUS.md  A10-PHASE4-SESSION-SUMMARY.md  A10-SECURITY-AUDIT-SUMMARY.md  A10-SESSION-FINAL-SUMMARY.md  A10-SESSION-SUMMARY-2026-03-01.md  A10-SESSION-SUMMARY-PHASE4.md  A11-HANDOFF-STATUS.md  A11-PHASE5-BLOCK2-SESSION13-COMPLETION.md  A11-PHASE7-8-STATUS.md  A11-PHASE8-ROADMAP.md  A11-PHASE8-WEEK1-PLAN.md  A11-SESSION-SUMMARY-2026-03-01.md  A11-SESSION-SUMMARY-2026-03-03.md  A11-SESSION-SUMMARY-2026-03-04.md  A11-SESSION-SUMMARY.md  A11-SESSION3-EXECUTIVE-SUMMARY.md  A11-STATUS-2026-03-01.md  A11_PHASE3_SESSION1_SUMMARY.md  A11_PHASE7_NOTES.md  A11_PHASE7_SUMMARY.md  A11_SESSION_SUMMARY.md  A11_STATUS_REPORT.md  A2-HANDOFF.md  A4-PHASE12-SUMMARY.md  A5-PHASE38-BLOCK1-IMPLEMENTATION.md  A5-SESSION1-SUMMARY.md  A6-PHASE4-IMPLEMENTATION.md  A6-PHASE4-OPENCODE-INVESTIGATION.md  A6-PHASE4-SESSION4-STATUS.md  A8-PHASE3-SESSION3-BLOCKER.md  A8-SESSION3-SUMMARY.md  A9-BLOCK3-DESIGN.md  A9-GITHUB-ACTIONS-INTEGRATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  (+600 more)
crates/claudefs-fuse/: Cargo.toml  README.md
crates/claudefs-fuse/src/: attr.rs  buffer_pool.rs  cache.rs  cache_coherence.rs  capability.rs  client_auth.rs  crash_recovery.rs  datacache.rs  deleg.rs  dir_cache.rs  dirnotify.rs  distributed_session_manager.rs  error.rs  fadvise.rs  fallocate.rs  filesystem.rs  flock.rs  fsinfo.rs  fsync_barrier.rs  health.rs  hotpath.rs  idmap.rs  inode.rs  interrupt.rs  io_depth.rs  io_priority.rs  lib.rs  locking.rs  lookup_cache.rs  main.rs  metrics.rs  migration.rs  mmap.rs  mount.rs  mount_opts.rs  multipath.rs  notify_filter.rs  openfile.rs  operations.rs  otel_trace.rs  (+27 more)
crates/claudefs-gateway/: Cargo.toml  README.md
crates/claudefs-gateway/docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  OPERATIONS_RUNBOOK.md  PERFORMANCE_TUNING.md  PROTOCOL_NOTES.md
crates/claudefs-gateway/src/: access_log.rs  auth.rs  cluster_backend.rs  config.rs  cross_protocol_consistency.rs  error.rs  export_manager.rs  gateway_audit.rs  gateway_circuit_breaker.rs  gateway_conn_pool.rs  gateway_metrics.rs  gateway_observability.rs  gateway_tls.rs  health.rs  lib.rs  main.rs  mount.rs  nfs.rs  nfs_acl.rs  nfs_cache.rs  nfs_copy_offload.rs  nfs_delegation.rs  nfs_delegation_manager.rs  nfs_export.rs  nfs_listener.rs  nfs_readdirplus.rs  nfs_referral.rs  nfs_v4_session.rs  nfs_write.rs  perf_config.rs  pnfs.rs  pnfs_flex.rs  portmap.rs  protocol.rs  quota.rs  rpc.rs  s3.rs  s3_bucket_policy.rs  s3_cors.rs  s3_encryption.rs  (+20 more)
crates/claudefs-meta/: Cargo.toml
crates/claudefs-meta/src/: access.rs  access_integration.rs  acl.rs  batch_ingest.rs  btree_store.rs  cdc.rs  checkpoint.rs  client_session.rs  concurrent_inode_ops.rs  conflict.rs  consensus.rs  cross_shard.rs  dir_walk.rs  directory.rs  dirshard.rs  distributed_transaction.rs  filehandle.rs  fingerprint.rs  fingerprint_index_integration.rs  follower_read.rs  fsck.rs  gc.rs  hardlink.rs  health.rs  inode.rs  inode_gen.rs  journal.rs  journal_compactor.rs  journal_tailer.rs  kvstore.rs  lazy_delete.rs  lease.rs  lease_renew.rs  lib.rs  locking.rs  main.rs  membership.rs  membership_failure_detector.rs  metrics.rs  mtime_tracker.rs  (+38 more)
crates/claudefs-meta/tests/: common.rs  integration.rs
crates/claudefs-mgmt/: Cargo.toml
crates/claudefs-mgmt/src/: alert_manager.rs  alerting.rs  analytics.rs  api.rs  audit_trail.rs  backup_rotation.rs  capacity.rs  cli.rs  cluster_bootstrap.rs  compliance.rs  config.rs  config_sync.rs  cost_tracker.rs  diagnostics.rs  drain.rs  event_sink.rs  events.rs  graceful_shutdown.rs  grafana.rs  health.rs  indexer.rs  lib.rs  live_config.rs  main.rs  maintenance.rs  metadata_consumer.rs  metrics.rs  metrics_collector.rs  migration.rs  node_scaling.rs  ops_metrics.rs  parquet_schema.rs  perf_report.rs  performance_tracker.rs  qos.rs  query_gateway.rs  quota.rs  quota_rpc.rs  rbac.rs  rebalance.rs  (+12 more)
crates/claudefs-reduce/: Cargo.toml
crates/claudefs-reduce/proptest-regressions/: checksum.txt
crates/claudefs-reduce/src/: adaptive_classifier.rs  async_meta_bridge.rs  audit_log.rs  background.rs  bandwidth_throttle.rs  block_map.rs  cache_coherency.rs  checksum.rs  checksum_store.rs  chunk_pipeline.rs  chunk_pool.rs  chunk_rebalancer.rs  chunk_scheduler.rs  chunk_tracker.rs  chunk_verifier.rs  compaction.rs  compaction_scheduler.rs  compression.rs  compression_advisor.rs  compression_stats.rs  cross_tenant_dedup.rs  data_classifier.rs  dedup_analytics.rs  dedup_bloom.rs  dedup_cache.rs  dedup_coordinator.rs  dedup_index.rs  dedup_pipeline.rs  dedupe.rs  defrag_planner.rs  delta_index.rs  ec_repair.rs  encryption.rs  erasure_codec.rs  error.rs  eviction_policy.rs  eviction_scorer.rs  fairness_queue.rs  fingerprint.rs  gc.rs  (+66 more)
crates/claudefs-reduce/tests/: chaos_failure_modes.rs  cluster_chaos_resilience.rs  cluster_dedup_consistency.rs  cluster_disaster_recovery.rs  cluster_feature_optimization.rs  cluster_gc_dynamic.rs  cluster_helpers.rs  cluster_integration_phase33.rs  cluster_lsh_scaling.rs  cluster_multi_client_workloads.rs  cluster_multinode_dedup.rs  cluster_multinode_setup.rs  cluster_performance_benchmarks.rs  cluster_quota_enforcement.rs  cluster_single_node_dedup.rs  cluster_stress_limits.rs  cluster_tier_management.rs  cluster_tiering_consistency.rs  cluster_tiering_s3_consistency.rs  cluster_tracing_integration.rs  integration_performance.rs  integration_read_path.rs  integration_tier_migration.rs  integration_write_path.rs  multitenancy_multisite.rs  performance_scalability.rs  soak_production_simulation.rs
crates/claudefs-repl/: Cargo.toml  README.md  build.rs
crates/claudefs-repl/proto/: replication.proto
crates/claudefs-repl/src/: active_active.rs  auth_ratelimit.rs  backpressure.rs  batch_auth.rs  catchup.rs  checkpoint.rs  compression.rs  conduit.rs  conduit_pool.rs  (+44 more)
crates/claudefs-security/: Cargo.toml
crates/claudefs-storage/: Cargo.toml
crates/claudefs-tests/: Cargo.toml
crates/claudefs-transport/: Cargo.toml
(+581 files in other folders)
