[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dirk Petersen"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
prost = "0.13"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
libc = "0.2"
io-uring = "0.7"
proptest = "1.4"