[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dirk Petersen"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
prost = "0.13"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
blake3 = "1"
fastcdc = "3"
lz4_flex = { version = "0.11", features = ["frame"] }
zstd = "0.13"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
bytes = "1"