[package]
name = "claudefs-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ClaudeFS subsystem: FUSE v3 daemon, passthrough mode, client-side caching"

[[bin]]
name = "cfs-fuse"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fuser = "0.15"
libc = "0.2"
lru = "0.12"

[lib]
name = "claudefs_fuse"
path = "src/lib.rs"