[package]
name = "claudefs-reduce"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ClaudeFS subsystem: Inline dedupe (BLAKE3), compression (LZ4/Zstd), encryption (AES-GCM)"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blake3 = "1"
fastcdc = "3"
lz4_flex = { version = "0.11", features = ["frame"] }
zstd = "0.13"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
bytes = "1"

[dev-dependencies]
proptest = "1"

[lib]
name = "claudefs_reduce"
path = "src/lib.rs"