[package]
name = "claudefs-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ClaudeFS security audit: fuzzing harnesses, crypto property tests, unsafe review"

[dependencies]
claudefs-storage = { path = "../claudefs-storage", features = ["uring"] }
claudefs-transport = { path = "../claudefs-transport" }
claudefs-reduce = { path = "../claudefs-reduce" }
claudefs-repl = { path = "../claudefs-repl" }
claudefs-gateway = { path = "../claudefs-gateway" }
claudefs-mgmt = { path = "../claudefs-mgmt" }
claudefs-fuse = { path = "../claudefs-fuse" }
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.4"
axum = { version = "0.7", features = ["macros", "json"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
serde_json = "1.0"
urlencoding = "2.1"