[package]
name = "claudefs-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ClaudeFS subsystem: Local NVMe I/O via io_uring, FDP/ZNS placement, block allocator"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blake3.workspace = true
libc = "0.2"
io-uring = { version = "0.7", optional = true }
crc32fast = "1"
crc64fast = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
serde_json.workspace = true

[dev-dependencies]
proptest = "1.4"
tempfile = "3"

[features]
default = []
uring = ["dep:io-uring"]

[lib]
name = "claudefs_storage"
path = "src/lib.rs"