[package]
name = "claudefs-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ClaudeFS A9: Test & Validation — POSIX suites, integration tests, benchmarks, Jepsen, CrashMonkey"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
bincode.workspace = true
serde_json = "1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
bytes = "1"
rand = "0.8"
tempfile = "3"
proptest = "1.4"
libc = "0.2"

claudefs-storage = { path = "../claudefs-storage" }
claudefs-meta = { path = "../claudefs-meta" }
claudefs-reduce = { path = "../claudefs-reduce" }
claudefs-transport = { path = "../claudefs-transport" }
claudefs-fuse = { path = "../claudefs-fuse" }
claudefs-repl = { path = "../claudefs-repl" }
claudefs-gateway = { path = "../claudefs-gateway" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.4"

[lib]
name = "claudefs_tests"
path = "src/lib.rs"