[package]
name = "claudefs-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ClaudeFS subsystem: RDMA via libfabric, TCP via io_uring, custom RPC protocol"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes = "1.7"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.4"

[lib]
name = "claudefs_transport"
path = "src/lib.rs"
