[package]
name = "claudefs-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ClaudeFS subsystem: RDMA via libfabric, TCP via io_uring, custom RPC protocol"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes = "1.7"
async-trait = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
getrandom = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.4"
serde_json = "1.0"

[lib]
name = "claudefs_transport"
path = "src/lib.rs"
